--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>O.V.I. UNIDAD 1. DISEÑOS DE SITIOS WEB </title>
+<title>O.V.I. Buenos Recuerdos </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta http-equiv="content-language" content="es" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -18,11 +18,11 @@
 <body class="exe-web-site"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<div id="header" ><div id="headerContent">O.V.I. UNIDAD 1. DISEÑOS DE SITIOS WEB</div></div>
+<div id="header" ><div id="headerContent"> Conocer distintas partes del mundo es lo que en realidad nos hace felices </div></div>
 <div id="siteNav">
 <ul>
    <li id="active"><a href="index.html" class="active daddy main-node">Inicio</a></li>
-   <li><a href="lecturas_ovi.html" class="daddy">Lecturas O.V.I.</a>
+   <li><a href="lecturas_ovi.html" class="daddy">Leer sobre los lugares que queremos conocer nos reglal a un mas conocimientos</a>
    <ul class="other-section">
       <li><a href="pautas_para_desarrollo_proyecto_web.html" class="no-ch">Pautas Para Desarrollo Proyecto Web</a></li>
       <li><a href="introduccin_a_git.html" class="no-ch">Introducción a GIT</a></li>
